# pypi-cookiecutter

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.github_repo}}/: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
{{cookiecutter.github_repo}}/.github/workflows/: pre-commit.yml  python-publish.yml
{{cookiecutter.package_name}}/: .gitignore  README.md  setup.py
{{cookiecutter.package_name}}/.github/workflows/: python-publish.yml
