[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.pypi_project }}"
requires-python = ">=3"
authors = [
  { name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}" },
]
description = "{{ cookiecutter.short_description }}"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = ["Programming Language :: Python :: 3"]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
pre-commit = ["pre-commit"]


[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repo }}"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repo }}/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"{{ cookiecutter.package_name }}" = "{{ cookiecutter.package_name }}"

[tool.setuptools.dynamic]
version = { attr = "{{cookiecutter.package_name}}.__version__" }

[tool.isort]
profile = "black"
line_length = 79
force_single_line = true

[tool.black]
line-length = 79
preview = true
enable-unstable-feature = ["string_processing"]

[tool.pyright]
venvPath = "."
venv = "venv"
include = ["{{ cookiecutter.package_name }}", "test.py"]
typeCheckingMode = "strict"
